# volback

./: DEVELOPMENT.md  Makefile  README.md  go.mod  go.sum
.github/workflows/: ci.yml
cmd/volback/: main.go
cmd/volume-backup/: main.go
e2e/: .gitignore  README.md  pyproject.toml  test_e2e.py
e2e/testdata/: backup_fs2fs.json  backup_fs2fs_restore.json  backup_fs2s3.json  backup_fs2s3_restore.json  lorem.pt
e2e/testdata/testarchive/: a.txt
examples/: backup_fs2fs.json  backup_fs2s3.json  restore_fs2fs.json  restore_s32fs.json
internal/config/: config.go  config_test.go
internal/crypto/: crypto.go  crypto_test.go
internal/pipes/: pipes.go  pipes_test.go
internal/volback/: fs.go  pull.go  push.go  s3.go  volback.go
internal/volback/transformers/: crypto.go
internal/zip/: zip.go  zip_test.go
internal/zip/testdata/: testfile.txt
internal/zip/testdata/testdirectory/: b.txt
internal/zip/testdata/testdirectory/a/: a.txt
zip/: zip.go
