[project]
name = "e2e"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]  
venvPath = "."  
venv = ".venv"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
requests = "^2.32.5"
testcontainers = "^4.12.0"
boto3 = "^1.40.25"
boto3-stubs = {extras = ["s3"], version = "^1.40.25"}

